Fri Mar  5 12:20:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl:
        * ace/Atomic_Op_GCC_T.cpp:
        * ace/Atomic_Op_GCC_T.h:
        * ace/Atomic_Op_GCC_T.inl:
          Added new Atomic template for the GCC builtin atomic op support.
          This is used on PPC64/PPC32/IA64 for int/unsigned int/long/unsigned long.
          On EM64T we do use this for int/unsigned int, the ACE assembly version for
          long/unsigned long is faster than the GCC.

          On FC10 64bit the int/unsigned int Atomic_Op is now around 6 to 7 times
          faster than before this change

        * ace/config-g++-common.h:
          Enable the new builtin atomic also for EM64T

        * ace/ace.mpc:
        * ace/Makefile.am:
          Added new files

Fri Mar  5 11:30:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Print the number of iterations

Fri Mar  5 11:28:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Also measure postfix increment/decrement

Fri Mar  5 11:21:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Added more checks to make sure Atomic_Op does work

Tue Mar  2 21:02:51 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (mask_ops_i): If the specified handle is
          not registered, return -1 instead of crashing.

Thu Mar  4 09:15:54 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/make_release.py:
          Fix for problems with creating MPC release tag.

Thu Mar  4 07:50:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Rewritten this test to use a template method so that we can
          test atomic op easily for various data types

        * ace/Time_Value.cpp:
          Layout changes and fixed compile problem with CB2010. This fixes